--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,14 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
-            android:name="project.farmpar.HomeActivity"
+            android:name=".HomeActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,82 +31,79 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="project.farmpar.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme1.NoActionBar">
-        </activity>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme1.NoActionBar"></activity>
 
-
-        <receiver android:name="project.farmpar.Service.AlarmReceiverPlant" />
-
-        <service
-            android:name="project.farmpar.Notifications.FirstPlant.Notification_Fertilization"
-            android:enabled="true" />
-        <service
-            android:name="project.farmpar.Notifications.FirstPlant.Notification_Irrigation"
-            android:enabled="true" />
-        <service
-            android:name="project.farmpar.Notifications.FirstPlant.Notification_AIrrigation"
-            android:enabled="true" />
-        <service
-            android:name="project.farmpar.Notifications.FirstPlant.Notification_AFertilization"
-            android:enabled="true" />
-
-
+        <receiver android:name=".Service.AlarmReceiverPlant" />
 
         <service
-            android:name="project.farmpar.Notifications.FiSho.Notification_ARWaterTempHigh"
+            android:name=".Notifications.FirstPlant.Notification_Fertilization"
             android:enabled="true" />
         <service
-            android:name="project.farmpar.Notifications.FiSho.Notification_ARWaterTempLow"
+            android:name=".Notifications.FirstPlant.Notification_Irrigation"
             android:enabled="true" />
         <service
-            android:name="project.farmpar.Notifications.FiSho.Notification_ARpHHigh"
+            android:name=".Notifications.FirstPlant.Notification_AIrrigation"
             android:enabled="true" />
         <service
-            android:name="project.farmpar.Notifications.FiSho.Notification_ARpHLow"
+            android:name=".Notifications.FirstPlant.Notification_AFertilization"
             android:enabled="true" />
         <service
-            android:name="project.farmpar.Notifications.FiSho.Notification_ARTurbidityHigh"
+            android:name=".Notifications.FiSho.Notification_ARWaterTempHigh"
             android:enabled="true" />
         <service
-            android:name="project.farmpar.Notifications.FiSho.Notification_ARTurbidityLow"
+            android:name=".Notifications.FiSho.Notification_ARWaterTempLow"
             android:enabled="true" />
         <service
-            android:name="project.farmpar.Notifications.FiSho.Notification_AFood"
+            android:name=".Notifications.FiSho.Notification_ARpHHigh"
+            android:enabled="true" />
+        <service
+            android:name=".Notifications.FiSho.Notification_ARpHLow"
+            android:enabled="true" />
+        <service
+            android:name=".Notifications.FiSho.Notification_ARTurbidityHigh"
+            android:enabled="true" />
+        <service
+            android:name=".Notifications.FiSho.Notification_ARTurbidityLow"
+            android:enabled="true" />
+        <service
+            android:name=".Notifications.FiSho.Notification_AFood"
             android:enabled="true" />
 
-        <receiver android:name="project.farmpar.Service.AlarmReceiverFish" />
-
-
+        <receiver android:name=".Service.AlarmReceiverFish" />
 
         <activity
-            android:name="project.farmpar.ui.RegisterActivity"
+            android:name=".ui.RegisterActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/Translucent" />
         <activity
-            android:name="project.farmpar.ui.ChatActivity"
-            android:parentActivityName="project.farmpar.MainChat"
+            android:name=".ui.ChatActivity"
+            android:parentActivityName=".MainChat"
             android:screenOrientation="portrait" />
         <activity
-            android:name="project.farmpar.ui.AddGroupActivity"
+            android:name=".ui.AddGroupActivity"
             android:theme="@style/AppTheme1.NoActionBar" />
+
         <service
-            android:name="project.farmpar.Service.FriendChatService"
+            android:name=".Service.FriendChatService"
             android:exported="false"
             android:persistent="true" />
+
         <activity
-            android:name="project.farmpar.MainChat"
+            android:name=".MainChat"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme1.NoActionBar"/>
+            android:theme="@style/AppTheme1.NoActionBar" />
         <activity
-            android:name="project.farmpar.ui.LoginActivity"
+            android:name=".ui.LoginActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:theme="@style/TranslucentBackground">
-        </activity>
+            android:theme="@style/TranslucentBackground"></activity>
+        <activity android:name=".About"></activity>
     </application>
+
 </manifest>
