--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ repositories {
     jcenter()
     mavenCentral()
     maven {
-        url "https://jitpack.io"
+        url "https://oss.sonatype.org/content/repositories/snapshots"
     }
 }
 
@@ -43,6 +43,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile('com.github.worker8:tourguide:1.0.18-SNAPSHOT@aar') {
+        transitive = true
+    }
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-annotations:25.3.1'
